Prevent accidental page reloading on mobile

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 1em 0 0 0;
     background-color: #464c52;
+    overscroll-behavior-y: contain !important;
 }
 
 #content {
